Closed Bug 22472 Opened 25 years ago Closed 25 years ago

[DOGFOOD] onchange= doesn't appear to work for html:input

Categories

(Core :: Layout, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: slogan, Assigned: joki)

References

Details

(Whiteboard: [PDT+])

Attachments

(2 files)

I'll work on a test case, but this feature seems to have regressed. I marked
this as dogfood since IM uses this in its implementation. I added a backstop fix
to get around it, but this is a critical bug and should be fixed for dogfood.
See scopus 381232.
Assignee: rickg → syd
Please return this bug to me once you have a test case ready.
Syd, can you please add more description as to how this affects users?
Still waiting for more input to help the PDT make a +/- comment on this.

Thanks,

Jim
The IM code uses onchange to update an attribute that contains the screenname to
which an IM is being addressed in the initial compose window. Our code is
written to depend on the onchange handler firing so this screenname attribute is
updated.
Whiteboard: [PDT-]
Although a bother, I think we reviewed a bug like this earlier and did not
consider it dogfood.  You can see the target of an IM discussion when starting
the dialog... and you can see the source/recipient name during a chat session...
so the only problem is knowing which window is which (while iconified).
If the problem has greater ramifications that I just indicated, then please
comment and ask for additional consideration.

I can believe this a beta stopper... but it probably won't stop developers from
using the product (a.k.a., PDT-).
Don't know if I agree, onchange is, from what I understand, a basic feature. We
should at least document that we don't support it, I'm sure there are going to
be developers expecting it works, and web pages that will break because it
doesn't work.
I'm going to have to agree with syd here, because I have been affected by this
outside of AIM (in IRC he corrected himself to say he meant it was <html:input
type="text"> which is VERY common on web sites with forms)

Our own bugzilla uses it when you reassign a bug, and this bit me yesterday: to
reassign a bug, you have to type in the new e-mail address, and select the
"Reassign bug to" radio button.
In 4.x the onchange= handler works, so the radio button gets selected
automatically.
Yesterday, I tried to reassign a couple of bugs but since I expected the radio
button to move automatically, I didn't actually reassign the bugs! I didn't
notice this until today, so the people I needed to look at the bugs didn't even
see them until today.
Status: NEW → ASSIGNED
Summary: [DOGFOOD] onchange= doesn't appear to work for html:text → [DOGFOOD] onchange= doesn't appear to work for html:input
Whiteboard: [PDT-]
Whiteboard: [PDT+]
The examples given are excellent, especially the ones relating to bugzilla
handling.  The fact that much of bugzilla will not work as expected, and hence
it is very hard to do bug handling, is probably reason enough to make this a
dogfood (developer essential) bug.
Changing to PDT+
Thanks,
Jim (PDT helper) Roskind
I'll try and come up with a simple test case on the plane up later this morning.
Attached file test case
Assignee: syd → rickg
Status: ASSIGNED → NEW
Added simple test case. To use:

mkdir bin/res/test
copy the attachment to bin/res/test/test.xul
run mozilla resource:/res/test/text.xul
You should see "Hello World!" printed to the console, xterm as characters are
typed in the input field that is displayed.
Assignee: rickg → nisheeth
Nisheeth -- I seem to recall that you had another event bug on XML/XUL. I'm
reassigning this to you as our best hope of finding a quick answer.
Assignee: nisheeth → joki
The onchange event does not fire for input elements inside HTML documents
either.  I'm attaching a simple HTML test case.  I don't know enough about the
event system to fix this quickly.  Re-assigning to Tom Pixley.

While testing, I tried the onmouseover event and that fired fine.
Attached file HTML test case
Target Milestone: M13
Target Milestone: M13
*** Bug 23292 has been marked as a duplicate of this bug. ***
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
It appears to have been inadvertently commented out.  I put it back in.
Fixed in the Jan 20th build.
Status: RESOLVED → VERIFIED
SPAM. HTML Element component deprecated, changing component to Layout. See bug
88132 for details.
Component: HTML Element → Layout
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: